--- a/skillNexus/data/templates/tmpcard.html
+++ b/skillNexus/data/templates/tmpcard.html
@@ -251,35 +251,38 @@
 
       <!-- Metrics and Insights Section -->
       <!-- Charts -->
-      <div class="col-lg-3 pe-lg-0">
-        <div class="card  rounded-0  mybg">
-          <div class="card-body">
-            <h3 class="card-title my-color"> </h3>
-            <canvas id=""></canvas>
+      <div class="col-12 row my-row my-0 py-0" >
+
+        <div class="col-lg-6 px-0 mb-2 pe-lg-2">
+          <div class="card  rounded-0  mybg">
+            <div class="card-body">
+              <h3 class="card-title my-color"> </h3>
+              <canvas id=""></canvas>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-lg-3 ps-lg-2 pe-lg-0">
-        <div class="card  rounded-0  mybg">
-          <div class="card-body">
-            <h3 class="card-title my-color"> </h3>
-            <canvas id=""></canvas>
+        <div class="col-lg-6 px-0">
+          <div class="card  rounded-0  mybg">
+            <div class="card-body">
+              <h3 class="card-title my-color"> </h3>
+              <canvas id=""></canvas>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-lg-3 ps-lg-2 pe-lg-0">
-        <div class="card  rounded-0  mybg">
-          <div class="card-body">
-            <h3 class="card-title my-color"> </h3>
-            <canvas id=""></canvas>
+        <div class="col-lg-6 px-0 mb-2 pe-lg-2">
+          <div class="card  rounded-0  mybg">
+            <div class="card-body">
+              <h3 class="card-title my-color"> </h3>
+              <canvas id=""></canvas>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-lg-3 ps-lg-2 pb-2">
-        <div class="card  rounded-0  mybg">
-          <div class="card-body">
-            <h3 class="card-title my-color"> </h3>
-            <canvas id=""></canvas>
+        <div class="col-lg-6 px-0 mb-2 ">
+          <div class="card  rounded-0  mybg">
+            <div class="card-body">
+              <h3 class="card-title my-color"> </h3>
+              <canvas id=""></canvas>
+            </div>
           </div>
         </div>
       </div>
