--- a/skillNexus/data/templates/home.html
+++ b/skillNexus/data/templates/home.html
@@ -52,16 +52,19 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Link</a>
                 </li>
-                <li class="nav-item logged-out d-none">
-                  <a class="nav-link" href="/login" data="Link">Login</a>
-                </li>
-                <div class="profile-con ms-2 logged-in d-none">
+
+                {% if user.is_authenticated %}
+                <div class="profile-con ms-1" style="display: block !important">
+                  {% if user.profile_picture %}
+                  <img src="/{{user.profile_picture}}" alt="profile pic" />
+                  {% else %}
                   <div class="icon">
                     <i
                       class="fa-solid fa-user fa-xl"
                       style="color: #00eeff"
                     ></i>
                   </div>
+                  {% endif %}
                   <ul class="dropdown-menu bg-dar">
                     <li>
                       <a class="dropdown-item" href="/profile">Profile</a>
@@ -69,12 +72,19 @@
                     <li>
                       <a class="dropdown-item" href="#">Another action</a>
                     </li>
-                    <li><hr class="dropdown-divider" /></li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
                     <li>
                       <a class="dropdown-item logout" href="#">Logout</a>
                     </li>
                   </ul>
                 </div>
+                {% else %}
+                <li class="nav-item logged-out">
+                  <a class="nav-link" href="/login" data="Link">Login</a>
+                </li>
+                {% endif %}
               </ul>
             </div>
           </nav>
