--- a/skillNexus/data/templates/university_session.html
+++ b/skillNexus/data/templates/university_session.html
@@ -15,6 +15,11 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="{%  static 'css/style.css' %}" />
+  <style>
+    td {
+        text-transform: capitalize;
+      }
+  </style>
 </head>
 
 <body>
@@ -37,7 +42,141 @@
       </ol>
     </nav>
     <!-- Program Print Section -->
-
+        <!-- modal for applicant -->
+        <div class="modal modal-xl fade" id="applicantModal" tabindex="-1" aria-labelledby="applicantModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-scrollable" >
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="applicantModalLabel">Application Details</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="row">
+                  <div class="col-12">
+                    <h3>Applicant Details</h3>
+                    <table class="table">
+                      <tbody>
+                        <tr>
+                          <th>Application ID</th>
+                          <td class="application_id"></td>
+                        </tr>
+                        <tr>
+                          <th>Student Name</th>
+                          <td class="student_name"></td>
+                        </tr>
+                        <tr>
+                          <th>Student ID</th>
+                          <td class="student_id"></td>
+                        </tr>
+                        <tr>
+                          <th>Email</th>
+                          <td class="email" style="text-transform: unset"></td>
+                        </tr>
+                        <tr>
+                          <th>Mobile</th>
+                          <td class="mobile"></td>
+                        </tr>
+                        <tr>
+                          <th>Country</th>
+                          <td class="country"></td>
+                        </tr>
+                        <tr>
+                          <th>Status</th>
+                          <td class="status"></td>
+                        </tr>
+                        <tr>
+                          <th>Session Name</th>
+                          <td class="session_name"></td>
+                        </tr>
+                        <tr>
+                          <th>Comment</th>
+                          <td class="">
+                            <textarea class="form-control comment"></textarea>
+                          </td>
+                        </tr>
+                        <tr>
+                          <th>Applied At</th>
+                          <td class="created_at"></td>
+                        </tr>
+                        <tr>
+                          <th>Last Updated At</th>
+                          <td class="updated_at"></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h3>Education</h3>
+                    <table class="table table-striped table-bordered">
+                      <thead>
+                        <tr>
+                          <th>#</th>
+                          <th>Degree</th>
+                          <th>Level</th>
+                          <th>Major</th>
+                          <th>Institute</th>
+                          <th>Passing Year</th>
+                          <th>Result</th>
+                        </tr>
+                      </thead>
+                      <tbody id="educations">
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h3>Training</h3>
+                    <table class="table table-striped table-bordered">
+                      <thead>
+                        <tr>
+                          <th>#</th>
+                          <th>Title</th>
+                          <th>Institution Name</th>
+                          <th>Country</th>
+                          <th>Duration</th>
+                          <th>Start Date</th>
+                          <th>End Date</th>
+                        </tr>
+                      </thead>
+                      <tbody id="trainings">
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h3>Experience</h3>
+                    <table class="table table-striped table-bordered ">
+                      <thead>
+                        <tr>
+                          <th>#</th>
+                          <th>Designation</th>
+                          <th>Department</th>
+                          <th>Organisation Name</th>
+                          <th>Location</th>
+                          <th>Duration</th>
+                          <th>Start Date</th>
+                          <th>End Date</th>
+                        </tr>
+                      </thead>
+                      <tbody id="experiences">
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                {% comment %} <button type="button" class="btn btn-success btn-approve ">Approve</button>
+                <button type="button" class="btn btn-danger btn-reject">Reject</button> {% endcomment %}
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End modal for applicant -->
 
 
     <!-- Program Overview Section -->
@@ -90,56 +229,83 @@
         </div>
 
 
-        <div class="card  my-row rounded-0  mybg">
-          <div class="card-header" style="margin: -10px -10px 0 -10px">
-
-            <div class="d-flex justify-content-between">
-              <h3 class="card-title mb-0">Sessions</h3>
-              <button class="btn btn-primary ms-2 rounded-0" type="button" data-bs-toggle="modal"
-                data-bs-target="#programSessionModal">Add Session</button>
-            </div>
-          </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table table-striped table-bordered align-middle">
-                <thead>
-                  <tr>
-                  </tr>
-                </thead>
-                <tbody class="table-group-divider">
-
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-
         <!-- Applicant List Table -->
-
         <div class="col-12">
-          <div class="card  my-row rounded-0 mybg">
+          <div class="card my-row rounded-0 mybg">
             <div class="card-header" style="margin: -10px -10px 0 -10px">
               <div class="d-flex justify-content-between">
                 <h3 class="card-title mb-0">Applicant List</h3>
-
+                {% comment %}
+                <button
+                  class="btn btn-primary ms-2 rounded-0"
+                  type="button"
+                  data-bs-toggle="modal"
+                  data-bs-target="#programSessionModal"
+                >
+                  Add Session
+                </button>
+                {% endcomment %}
               </div>
             </div>
             <div class="card-body">
               <div class="mb-3">
-                <input type="text" class="form-control" id="applicantSearch" placeholder="Search applicants...">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="applicantSearch"
+                  placeholder="Search applicants..."
+                />
               </div>
               <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped table-bordered">
                   <thead>
                     <tr class="my-color">
-                      <th>Name</th>
+                      <th>#</th>
+                      <!-- <th></th> -->
+                      <th>Student Name</th>
+                      <th>Student ID</th>
+                      <th>Email</th>
+                      <th>Phone</th>
+                      <th>Country</th>
                       <th>Status</th>
+                      <th>Session Name</th>
+                      <th>Comment</th>
                       <th>Submission Date</th>
+                      <th>Last Updated</th>
                       <th>Actions</th>
                     </tr>
                   </thead>
-                  <tbody>
-
+                  <tbody id="applicantsTable">
+                    {% for applicant in applicants %}
+                    <tr class="my-color">
+                      <td>{{ forloop.counter }}</td>
+                      <!-- <td><img src="/{{ applicant.profile_picture }}" alt=" Picture" width="50" height="50"></td> -->
+                      <td>{{ applicant.student_name }}</td>
+                      <td>{{ applicant.student_id }}</td>
+                      <td style="text-transform: unset">{{ applicant.email }}</td>
+                      <td>{{ applicant.mobile }}</td>
+                      <td>{{ applicant.country }}</td>
+                      <td>
+                        <span
+                          class="badge {% if applicant.status == 'Approved' %}bg-success{% elif applicant.status == 'Rejected' %}bg-danger{% else %}bg-warning{% endif %}"
+                        >
+                          {{ applicant.status }}
+                        </span>
+                      </td>
+                      <td>{{ applicant.session_name }}</td>
+                      <td>{{ applicant.comment }}</td>
+                      <td>{{ applicant.created_at|date:"Y-m-d h:i A" }}</td>
+                      <td>{{ applicant.updated_at|date:"Y-m-d h:i A" }}</td>
+                      <td>
+                        <button
+                          class="btn btn-sm btn-outline-success me-1 rounded-0 application-view"
+                          data-id="{{ applicant.application_id }}"
+                        >
+                          <i class="fa-solid fa-eye me-1"></i> View
+                        </button>
+                      </td>
+                    </tr>
+                    {% endfor %}
                   </tbody>
                 </table>
               </div>
@@ -201,12 +367,15 @@
   </div>
   </div>
 
-  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+ 
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
   <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="{% static 'js/script.js' %}"></script>
   <!-- <script src="{% static 'js/university_session.js' %}"></script> -->
+
+    <script src="{% static 'js/manageProgram.js' %}"></script>
   <script>
     $(document).ready(function () {
       on_page_load([]);
