--- a/skillNexus/data/templates/manageProgram.html
+++ b/skillNexus/data/templates/manageProgram.html
@@ -546,8 +546,8 @@
                           </td>
                           <td>{{ applicant.session_name }}</td>
                           <td>{{ applicant.comment }}</td>
-                          <td>{{ applicant.created_at|date:"Y-m-d h:i A" }}</td>
-                          <td>{{ applicant.updated_at|date:"Y-m-d h:i A" }}</td>
+                          <td>{{ applicant.created_at|date:"M d, Y, h:i A" }}</td>
+                          <td>{{ applicant.updated_at|date:"M d, Y, h:i A" }}</td>
                           <td>
                             <button
                               class="btn btn-sm btn-outline-success me-1 rounded-0 application-view"
