--- a/skillNexus/data/templates/employer_jobs.html
+++ b/skillNexus/data/templates/employer_jobs.html
@@ -204,7 +204,7 @@
                       <td>{{ job.location }}</td>
                       <td>{{ job.project_duration }}</td>
                       <td>{{ job.price }}</td>
-                      <td>{{ job.deadline |date:"M d, Y, h:i A" }}</td>
+                      <td>{{ job.deadline |date:"M d, Y" }}</td>
                       <td>{{ job.skills }}</td>
                       <td>{{ job.offer_count }}</td>
                       <td>{{ job.created_at|date:"M d, Y, h:i A" }}</td>
